fix visibility

--- a/frontend/src/app/features/chat/chat-shell.component.scss
+++ b/frontend/src/app/features/chat/chat-shell.component.scss
@@ -951,13 +951,14 @@ mat-chip:not(.offline) {
   display: flex;
   flex-direction: column;
   gap: 10px;
-  position: relative;
   top: auto;
   z-index: 2;
-  height: 100%;
+  height: 70%;
   min-height: 0;
   overflow: auto;
   overscroll-behavior: contain;
+  position: fixed;
+  width: calc(79% - 30px);
 }
 
 .messages-panel.shuttle-no-scroll .shuttle-orders-dashboard {
